#+title: corfu.el - Changelog
#+author: Daniel Mendler
#+language: en

* Development

- Ensure that the popup font matches the font of the parent frame.
- Close popup when window selection changes.

* Version 0.36 (2023-03-27)

- Drop obsolete =corfu-preselect-first=.
- =corfu-popupinfo-delay= and =corfu-echo-delay=: Remove support for value =t=.
  Instant updates are not recommended. It is still possible to use a small value
  for the delay.
- Rename =corfu-excluded-modes= to =corfu-exclude-modes= (Naming convention).
- Remove call to =undo-boundary=, which caused issues with auto completion.

* Version 0.35 (2023-02-17)

- =corfu-popupinfo=: Take more text into account when computing popup width.
- =corfu-popupinfo=: Change keybindings, remap =corfu-info-documentation/location=.
- =corfu-popupinfo=: Add commands =corfu-popupinfo-beginning/end=.
- =corfu-popupinfo=: Improve popup placement.
- Add =corfu-prompt-beginning= and =corfu-prompt-end= commands.
- Add =corfu-preselect= option, deprecate =corfu-preselect-first=.
- Use =cl-defgeneric= internally as mechanism to allow extensions to override
  functionality, e.g., the candidate formatting and display.

* Version 0.34 (2022-12-03)

- Bugfixes
- Popup frame code updated for Emacs 29. Please report any issues.
- =corfu-popupinfo-direction=: Variable must be a list of directions.
- Support height adjustments of =corfu-default= face

* Version 0.33 (2022-11-21)

- =corfu-popupinfo=: Bugfixes

* Version 0.31 (2022-11-20)

- =corfu-echo=, =corfu-quick=: Bugfixes for interaction issue.

* Version 0.30 (2022-11-19)

- =corfu-popupinfo=: Bugfixes and improvements.

* Version 0.29 (2022-11-19)

- BREAKING: Extract the =corfu-echo= extension from =corfu.el=. In order to see echo
  messages, enable =corfu-echo-mode=. You probably want to enable either
  =corfu-echo-mode= or =corfu-popupinfo-mode=.
- BREAKING: Rename =corfu-echo-documentation= to =corfu-echo-delay=.